--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/SettingsWindow.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/SettingsWindow.mxml
@@ -7,9 +7,7 @@
 	<s:layout>
 		<s:VerticalLayout/>
 	</s:layout>
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+	
 	<s:Group width="100%" height="100%">
 		<s:layout>
 			<s:HorizontalLayout/>
@@ -18,9 +16,15 @@
 		<s:Group width="100%" height="100%" id="settingsScreenHolder">
 		</s:Group>
 	</s:Group>
+	
 	<s:HGroup width="100%" >
+		
 		<mx:Spacer width="100%"/>
-		<s:Button label="OK"/>
-		<s:Button label="Cancel"/>
+		
+		<s:Button id="performOK"
+				  label="OK"/>
+		
+		<s:Button id="performCancel"
+				  label="Cancel"/>
 	</s:HGroup>
 </s:Window>
