--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplication.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplication.mxml
@@ -37,6 +37,33 @@
 				<s:RichEditableText width="100%" height="100%"/>
 			</s:Group>
 		</s:VGroup>
+			
+		<s:List id="itemList" width="100%">
+			<s:layout>
+				<s:TileLayout/>
+			</s:layout>
+			<s:itemRenderer>
+				<fx:Component>
+					<s:ItemRenderer>
+						<s:states>
+							<s:State name="normal" />
+							<s:State name="hovered" />
+							<s:State name="selected" />
+						</s:states>
+						<s:Rect left="0" right="0" top="0" bottom="0">
+							<s:fill>
+								<s:SolidColor color="0x999999" alpha="0" alpha.hovered="0.2"
+											  alpha.selected="0.6" />
+							</s:fill>
+						</s:Rect>
+						<s:VGroup>
+							<mx:Image source="{data.content}" />
+							<s:Label text="{data.name}" /> 
+						</s:VGroup>
+					</s:ItemRenderer>
+				</fx:Component>
+			</s:itemRenderer>
+		</s:List>
 		
 		<s:HGroup>
 			<s:Button label="Save" />
