--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/GalleryItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/GalleryItemRenderer.mxml
@@ -2,11 +2,23 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 				xmlns:s="library://ns.adobe.com/flex/spark" 
 				xmlns:mx="library://ns.adobe.com/flex/halo">
+	
+	<fx:Script>
+		<![CDATA[
+			public override function set data(value:Object) : void
+			{
+				itemImage.source = value.content;
+				itemLabel.text = value.name;
+			}
+		]]>
+	</fx:Script>
+	
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="hovered" />
 		<s:State name="selected" />
 	</s:states>
+	
 	<s:Rect left="0" right="0" top="0" bottom="0">
 		<s:fill>
 			<s:SolidColor color="0x999999" alpha="0" alpha.hovered="0.2"
@@ -14,7 +26,7 @@
 		</s:fill>
 	</s:Rect>
 	<s:VGroup>
-		<mx:Image source="{data.content}" />
-		<s:Label text="{data.name}" /> 
+		<mx:Image id="itemImage" />
+		<s:Label id="itemLabel" /> 
 	</s:VGroup>
 </s:ItemRenderer>
