--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -6,26 +6,12 @@
 		 
 		 width="100%" height="100%">
 	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	
 	<mx:ViewStack id="viewStack"
 				  width="100%" height="100%">
-		<s:NavigatorContent id="editApplicationView"
-			width="100%" height="100%">
-			
-			<s:layout>
-				<s:HorizontalLayout />
-			</s:layout>
-			
-			<components:ApplicationProperties id="applicationProperties"
-											  width="100%" height="100%"/>
-			<s:List id="applicationsList"
-					width="270" height="100%" useVirtualLayout="false" />
-		</s:NavigatorContent>
 		
-		<components:CreateApplication id="createApplicationView" />
+		<components:EditApplicationView id="editApplicationView" />
+		<components:CreateApplicationView id="createApplicationView" />
+		
 	</mx:ViewStack>
 	
 </s:Group>
