--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -6,12 +6,14 @@
 		 
 		 width="100%" height="100%">
 	
-	<mx:ViewStack id="viewStack"
-				  width="100%" height="100%">
-		
-		<components:EditApplicationView id="editApplicationView" />
-		<components:CreateApplicationView id="createApplicationView" />
-		
-	</mx:ViewStack>
+	<s:states>
+		<s:State name="default" />
+		<s:State name="CreateApplicationView" />
+	</s:states>
+	
+	<components:EditApplicationView id="editApplicationView"
+									includeIn="default" itemCreationPolicy="immediate"/>
+	<components:CreateApplicationView id="createApplicationView"
+									  includeIn="CreateApplicationView" itemCreationPolicy="immediate"/>
 	
 </s:Group>
