--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-				xmlns:s="library://ns.adobe.com/flex/spark" 
-				xmlns:mx="library://ns.adobe.com/flex/halo"
+<s:ItemRenderer
+	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
 				
-				width="100%" height="115"
-				buttonMode="true"
+	width="100%" height="115"
+	buttonMode="true"
 				
-				creationComplete="creationCompleteHandler( event )" >
+	creationComplete="creationCompleteHandler( event )">
+	
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -22,37 +24,37 @@
 		]]>
 	</fx:Script>
 	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	
-	<!--<s:layout><s:HorizontalLayout /></s:layout>-->
-	
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="hovered" />
 		<s:State name="selected" />
 	</s:states>
 	
-	<s:Rect left="0" right="0" top="0" bottom="0">
+	<s:Rect
+		left="0" right="0" top="0" bottom="0">
+		
 		<s:fill>
-			<s:SolidColor color="0x999999" alpha="0" alpha.hovered="0.2"
-						  alpha.selected="0.6" />
+			<s:SolidColor
+				color="0x999999" alpha="0" alpha.hovered="0.2" alpha.selected="0.6" />
 		</s:fill>
 	</s:Rect>
-	<s:Rect width="90" height="95" top="10" left="10">
+	
+	<s:Rect
+		width="90" height="95" top="10" left="10">
+		
 		<s:stroke>
 			<s:SolidColorStroke color="black" />
 		</s:stroke>
 	</s:Rect>
+	
 	<mx:Image id="imageHolder"
-			  width="50" height="50" left="30" top="30"/>
+		width="50" height="50" left="30" top="30"/>
 	
 	<s:Label id="nameLabel"
-			 left="110" fontWeight="bold" top="10" width="100%" right="10"/>
+		left="110" fontWeight="bold" top="10" width="100%" right="10"/>
 	
 	<s:RichText id="description"
-				right="10" left="110" top="35" bottom="40"/>
+		right="10" left="110" top="35" bottom="40"/>
 	
 	<s:Label id="pagesCount"
 		bottom="10" right="10"/>
