--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
@@ -16,19 +16,10 @@
 		<components:LoadResourcesView id="loadResourcesView"
 			width="100%" />
 		
-		<s:Rect 
-			height="100%" width="100%">
-			
-			<s:stroke>
-				<s:SolidColorStroke 
-					color="black" />
-			</s:stroke>
-			
-			<s:fill>
-				<s:SolidColor 
-					color="white" />
-			</s:fill>
-			
-		</s:Rect>
+		<s:Group
+			width="100%" height="100%">
+			<mx:Image id="preview"
+				horizontalCenter="0" verticalCenter="0"/>
+		</s:Group>
 	</s:VGroup>
 </s:HGroup>
