--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
@@ -18,8 +18,17 @@
 		
 		<s:Group
 			width="100%" height="100%">
+			
+			<s:layout>
+				<s:VerticalLayout />
+			</s:layout>
+			
 			<mx:Image id="preview"
+				width="100%" height="100%"
 				horizontalCenter="0" verticalCenter="0"/>
+			<s:Button
+				label="Delete"
+				click="dispatchEvent( new Event('deleteResource') )"/>
 		</s:Group>
 	</s:VGroup>
 </s:HGroup>
