--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
@@ -1,78 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/halo"
-					xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
-					
-					width="100%" height="100%" >
+<s:NavigatorContent 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	
+	height="100%" width="100%"
+	xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark">
+
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.applicationsManagment.events.EditApplicationViewEvent;
 		]]>
 	</fx:Script>
-	
+
 	<s:states>
-		<s:State name="default"/>
-		<s:State name="changeIcon"/>
-		<s:State name="changeName"/>
-		<s:State name="changeDescription"/>
+
+		<s:State name="default" />
+
+		<s:State name="changeIcon" />
+
+		<s:State name="changeName" />
+
+		<s:State name="changeDescription" />
 	</s:states>
-	
+
 	<s:layout>
+
 		<s:HorizontalLayout />
 	</s:layout>
-	
-	<s:Group width="100%" height="100%">
-		
-		<s:VGroup left="30" top="30" right="30" bottom="30" >
-			
-			<s:Label id="applicationName" fontFamily="Verdana" fontSize="24" fontWeight="bold" />
-			<s:RichText id="counts" fontFamily="Verdana" fontSize="12" fontWeight="bold" />
-			<s:Label id="objectsCount" fontFamily="Verdana" fontSize="12" fontWeight="bold" />
-			
-			<s:Scroller width="100%" minHeight="50" maxHeight="200">
-				<s:Group>	
-					<s:RichText id="applicationDescription"	width="100%" />
+
+	<s:Group height="100%" width="100%">
+
+		<s:VGroup 
+			bottom="30" left="30" right="30" top="30">
+
+			<s:Label id="applicationName"
+				fontFamily="Verdana" fontSize="24" fontWeight="bold" />
+
+			<s:RichText id="counts"
+				fontFamily="Verdana" fontSize="12" fontWeight="bold" />
+
+			<s:Label id="objectsCount"
+				fontFamily="Verdana" fontSize="12" fontWeight="bold" />
+
+			<s:Scroller 
+				maxHeight="200" minHeight="50" width="100%">
+
+				<s:Group>
+
+					<s:RichText id="applicationDescription" width="100%" />
 				</s:Group>
 			</s:Scroller>
-			
+
 			<s:Label id="actionsForLabel"
-					 fontFamily="Verdana" fontSize="18" />
-			
-			<s:Label text="Change icon:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-					 click="currentState='changeIcon'" />
-			<s:VGroup includeIn="changeIcon" width="100%">
+				fontFamily="Verdana" fontSize="18" />
+
+			<s:Label 
+				text="Change icon:"
+				
+				fontFamily="Verdana" fontSize="14" textDecoration="underline"
+				
+				click="currentState='changeIcon'"
+				buttonMode="true" />
+
+			<s:VGroup width="100%" includeIn="changeIcon">
+
 				<s:TextInput />
+
 				<s:Button label="Save" click="currentState='default'" />
 			</s:VGroup>
-			
-			<s:Label text="Change name:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-					 click="currentState='changeName'" />
-			<s:VGroup includeIn="changeName" width="100%">
-				<s:TextInput id="newApplicationName"/>
-				<s:Button label="Save" click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_NAME_CHANGED ) )" />
+
+			<s:Label 
+				text="Change name:"
+				
+				fontFamily="Verdana" fontSize="14" textDecoration="underline"
+				
+				click="currentState='changeName'"
+				buttonMode="true" />
+
+			<s:VGroup width="100%" includeIn="changeName">
+
+				<s:TextInput id="newApplicationName" />
+
+				<s:Button
+					label="Save" 
+					click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_NAME_CHANGED ) )" />
 			</s:VGroup>
-			
-			<s:Label text="Edit Description:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-					 click="currentState='changeDescription'" />
-			<s:VGroup includeIn="changeDescription" width="100%">
-				<s:Group width="100%" height="50">
-					<s:Rect width="100%" height="100%">
+
+			<s:Label 
+				text="Edit Description:"
+				
+				fontFamily="Verdana" fontSize="14" textDecoration="underline"
+				
+				click="currentState='changeDescription'"
+				buttonMode="true" />
+
+			<s:VGroup width="100%" includeIn="changeDescription">
+
+				<s:Group height="50" width="100%">
+
+					<s:Rect height="100%" width="100%">
+
 						<s:stroke>
+
 							<s:SolidColorStroke color="black" />
 						</s:stroke>
+
 						<s:fill>
+
 							<s:SolidColor color="white" />
 						</s:fill>
 					</s:Rect>
-					<s:RichEditableText width="100%" height="100%" />
+
+					<s:RichEditableText id="newApplicationDescription"
+						height="100%" width="100%" />
 				</s:Group>
-				<s:Button label="Save" click="currentState='default'" />
+
+				<s:Button
+					label="Save"
+					click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_DESCRIPTION_CHANGED ) )" />
 			</s:VGroup>
 		</s:VGroup>
-		
 	</s:Group>
+
 	<s:List id="applicationsList"
-			width="270" height="100%" useVirtualLayout="false" />
-	
+		height="100%" width="270"
+		useVirtualLayout="false" />
 </s:NavigatorContent>
