--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
@@ -1,76 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/halo"
-					
-					width="100%" height="100%">
+<s:NavigatorContent 
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	
+	height="100%" width="100%"
+	xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*">
+
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.applicationsManagment.events.CreateApplicationViewEvent;
 		]]>
 	</fx:Script>
-	
+
 	<s:states>
-		<s:State name="default"/>
-		<s:State name="gallery"/>
+
+		<s:State name="default" />
+
+		<s:State name="gallery" />
 	</s:states>
-	
-	<s:VGroup left="30" top="30" right="30" bottom="30">
-		
-		<mx:Image id="selectedIcon"
-				  width="64" height="64"/>
-		
-		<s:Label text="Select from gallery" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-				 click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.SHOW_ICONS_GALLERY ))"/>
-		
-		<s:List id="itemList"
-				width="100%" height="100" includeIn="gallery" itemCreationPolicy="immediate"
-				itemRenderer="net.vdombox.ide.modules.applicationsManagment.view.components.GalleryItemRenderer">
-			<s:layout>
-				<s:TileLayout/>
-			</s:layout>
-		</s:List>
-		
-		<s:Label text="Load from computer" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-				 click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.LOAD_ICON ))" />
-		
+
+	<s:VGroup 
+		bottom="30" left="30" right="30" top="30">
+
+		<components:IconChooser id="iconChooser"
+			width="100%" />
+
 		<s:HGroup width="100%">
-			
-			<s:Label text="Name:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true" />
-			<s:TextInput id="nameField"
-						 width="100%"/>
-			
-		</s:HGroup>
-		
-		<s:Label text="Description:" textDecoration="underline" 
-				 fontFamily="Verdana" fontSize="14" buttonMode="true"/>
-		
-		<s:VGroup width="100%">
-			<s:Group width="100%" height="50">
+
+			<s:Label 
+				buttonMode="true" text="Name:"
 				
-				<s:Rect width="100%" height="100%">
+				fontFamily="Verdana" fontSize="14" textDecoration="underline" />
+
+			<s:TextInput id="nameField"
+				width="100%" />
+		</s:HGroup>
+
+		<s:Label 
+			buttonMode="true" text="Description:"
+			
+			fontFamily="Verdana" fontSize="14" textDecoration="underline" />
+
+		<s:VGroup width="100%">
+
+			<s:Group 
+				height="50" width="100%">
+
+				<s:Rect 
+					height="100%" width="100%">
+
 					<s:stroke>
+
 						<s:SolidColorStroke color="black" />
 					</s:stroke>
+
 					<s:fill>
+
 						<s:SolidColor color="white" />
 					</s:fill>
 				</s:Rect>
-				
+
 				<s:RichEditableText id="descriptionField"
-									width="100%" height="100%"/>
+					height="100%" width="100%" />
 			</s:Group>
 		</s:VGroup>
-		
+
 		<s:HGroup>
+
 			<s:Button id="saveButton"
-					  label="Save" enabled="false"
-					  click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.SAVE ) )" />
-			
-			<s:Button label="Cancel" 
-					  click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.CANCEL ) )" />
+				enabled="false" label="Save"
+				
+				click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.SAVE ) )" />
+
+			<s:Button 
+				label="Cancel"
+				
+				click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.CANCEL ) )" />
 		</s:HGroup>
-		
 	</s:VGroup>
-	
 </s:NavigatorContent>
