--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent 
 	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
 	
 	height="100%" width="100%"
-	xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark">
+	xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*">
 
 	<fx:Script>
 		<![CDATA[
@@ -29,7 +29,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<s:Group height="100%" width="100%">
+	<s:Group 
+		height="100%" width="100%">
 
 		<s:VGroup 
 			bottom="30" left="30" right="30" top="30">
@@ -48,7 +49,8 @@
 
 				<s:Group>
 
-					<s:RichText id="applicationDescription" width="100%" />
+					<s:RichText id="applicationDescription"
+						width="100%" />
 				</s:Group>
 			</s:Scroller>
 
@@ -56,50 +58,60 @@
 				fontFamily="Verdana" fontSize="18" />
 
 			<s:Label 
-				text="Change icon:"
+				buttonMode="true" text="Change icon:"
 				
 				fontFamily="Verdana" fontSize="14" textDecoration="underline"
 				
-				click="currentState='changeIcon'"
-				buttonMode="true" />
+				click="currentState='changeIcon'" />
 
-			<s:VGroup width="100%" includeIn="changeIcon">
+			<s:VGroup 
+				width="100%"
+				includeIn="changeIcon" itemCreationPolicy="immediate">
 
-				<s:TextInput />
+				<components:IconChooser id="iconChooser"
+					width="100%" />
 
-				<s:Button label="Save" click="currentState='default'" />
+				<s:Button 
+					label="Save"
+					
+					click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_ICON_CHANGED ) )" />
 			</s:VGroup>
 
 			<s:Label 
-				text="Change name:"
+				buttonMode="true" text="Change name:"
 				
 				fontFamily="Verdana" fontSize="14" textDecoration="underline"
 				
-				click="currentState='changeName'"
-				buttonMode="true" />
+				click="currentState='changeName'" />
 
-			<s:VGroup width="100%" includeIn="changeName">
+			<s:VGroup 
+				width="100%"
+				includeIn="changeName">
 
 				<s:TextInput id="newApplicationName" />
 
-				<s:Button
-					label="Save" 
+				<s:Button 
+					label="Save"
+					
 					click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_NAME_CHANGED ) )" />
 			</s:VGroup>
 
 			<s:Label 
-				text="Edit Description:"
+				buttonMode="true" text="Edit Description:"
 				
 				fontFamily="Verdana" fontSize="14" textDecoration="underline"
 				
-				click="currentState='changeDescription'"
-				buttonMode="true" />
+				click="currentState='changeDescription'" />
 
-			<s:VGroup width="100%" includeIn="changeDescription">
+			<s:VGroup 
+				width="100%"
+				includeIn="changeDescription">
 
-				<s:Group height="50" width="100%">
+				<s:Group 
+					height="50" width="100%">
 
-					<s:Rect height="100%" width="100%">
+					<s:Rect 
+						height="100%" width="100%">
 
 						<s:stroke>
 
@@ -116,8 +128,9 @@
 						height="100%" width="100%" />
 				</s:Group>
 
-				<s:Button
+				<s:Button 
 					label="Save"
+					
 					click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_DESCRIPTION_CHANGED ) )" />
 			</s:VGroup>
 		</s:VGroup>
