--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -4,27 +4,30 @@
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	
-	height="100%" width="100%">
-	
-	<s:List id="resourceList"
-		height="100%" labelField="name" width="200" />
-	
-	<s:VGroup 
+	height="100%" width="100%"
+	xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
+
+	<fx:Script>
+		<![CDATA[
+			import spark.skins.spark.PanelSkin;
+		]]>
+	</fx:Script>
+
+	<mx:Accordion id="typesAccordion"  height="100%" width="150"/>
+
+	<s:Group 
 		height="100%" width="100%">
-		
-		<s:Group
-			width="100%" height="100%">
-			
-			<s:layout>
-				<s:VerticalLayout />
-			</s:layout>
-			
-			<mx:Image id="preview"
-				width="100%" height="100%"
-				horizontalCenter="0" verticalCenter="0"/>
-			<s:Button
-				label="Delete"
-				click="dispatchEvent( new Event('deleteResource') )"/>
-		</s:Group>
+	</s:Group>
+
+	<s:VGroup 
+		height="100%" width="200">
+
+		<s:Panel 
+			height="244" width="100%"
+			skinClass="spark.skins.spark.PanelSkin" />
+
+		<s:Panel 
+			height="200" width="100%"
+			skinClass="spark.skins.spark.PanelSkin" />
 	</s:VGroup>
 </s:HGroup>
