--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 
-		 implements="net.vdombox.ide.common.interfaces.IToolset">
-	
+<s:Group 
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	implements="net.vdombox.ide.common.interfaces.IToolset">
+
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.interfaces.IToolset;
-			
 		]]>
 	</fx:Script>
-	
+
 	<s:layout>
+
 		<s:HorizontalLayout />
 	</s:layout>
-	
-	<s:ToggleButton label="Wysiwyg" />
+
+	<s:ToggleButton id="toolsetButton"
+		label="Wysiwyg" />
 </s:Group>
