--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup 
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	
-	height="100%" width="100%"
-	xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
+<s:HGroup xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
+		  xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:mx="library://ns.adobe.com/flex/halo"
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  height="100%" width="100%">
 
 	<fx:Script>
 		<![CDATA[
@@ -13,21 +11,23 @@
 		]]>
 	</fx:Script>
 
-	<mx:Accordion id="typesAccordion"  height="100%" width="150"/>
+	<mx:Accordion id="typesAccordion"
+				  height="100%" width="150" />
 
 	<s:Group 
-		height="100%" width="100%">
+			 height="100%" width="100%">
 	</s:Group>
 
 	<s:VGroup 
-		height="100%" width="200">
+			  height="100%" width="200">
+
+		<components:ObjectsTreePanel id="objectsTreePanel"
+									 width="200" />
 
 		<s:Panel 
-			height="244" width="100%"
-			skinClass="spark.skins.spark.PanelSkin" />
-
-		<s:Panel 
-			height="200" width="100%"
-			skinClass="spark.skins.spark.PanelSkin" />
+				 height="200" width="100%"
+				 
+				 
+				 skinClass="spark.skins.spark.PanelSkin" />
 	</s:VGroup>
 </s:HGroup>
